Apply 'center' class to main video container when screen share is active.

--- a/js/vanilla-js-sample-app/public/index.html
+++ b/js/vanilla-js-sample-app/public/index.html
@@ -30,7 +30,7 @@
                 <div class="ots-video-control circle audio" id="toggleLocalAudio"></div>
                 <div class="ots-video-control circle video" id="toggleLocalVideo"></div>
             </div>
-            <div class="App-video-container">
+            <div class="App-video-container" id="appVideoContainer">
                 <div class="App-mask" id="connecting-mask">
                     <progress-spinner dark style="font-size:50px"></progress-spinner>
                     <div class="message with-spinner">Connecting</div>
