Hide camera publisher container until connected to session to remove need to update App-video-container class.

--- a/js/vanilla-js-sample-app/public/index.html
+++ b/js/vanilla-js-sample-app/public/index.html
@@ -38,7 +38,7 @@
                 <div class="App-mask hidden" id="start-mask">
                     <div class="message button clickable" id="start">Click to Start Call</div>
                 </div>
-                <div id="cameraPublisherContainer" class="video-container"></div>
+                <div id="cameraPublisherContainer" class="video-container hidden"></div>
                 <div id="screenPublisherContainer" class="video-container hidden"></div>
                 <div id="cameraSubscriberContainer" class="video-container-hidden"></div>
                 <div id="screenSubscriberContainer" class="video-container-hidden"></div>
