--- a/js/test/index.html
+++ b/js/test/index.html
@@ -9,6 +9,15 @@
     <script src="../node_modules/grunt-blanket-mocha/node_modules/blanket/dist/mocha/blanket_mocha.js"></script>
     <script src="../node_modules/grunt-blanket-mocha/support/mocha-blanket.js"></script>
     <script src="../node_modules/opentok-solutions-logging/src/opentok-solutions-logging.js"></script>
+    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-solutions-logging.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-text-chat.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-screen-sharing.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-annotation.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-archiving.js"></script>
+    <script src="../vanilla-js-sample-app/public/js/components/opentok-acc-core.js"></script>
 </head>
 <body>
   <div id="mocha">
@@ -20,6 +29,8 @@
     <script src="../src/state.js" data-cover></script>
     <script src="../src/util.js" data-cover></script>
     <script src="../test/communication-test.js"></script>
+    <script src="../test/core-test.js"></script>
+    <script src="../test/state-test.js"></script>
     <script>
     if (window.PHANTOMJS) {
         blanket.options("reporter", "../node_modules/grunt-blanket-mocha/support/grunt-reporter.js");
