--- a/sample-app/public/index.html
+++ b/sample-app/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <script src="https://localhost:4173/opentok.iife.js"></script>
-    <!-- <script src="https://unpkg.com/daily-opentok-client@0.0.11/dist/opentok.iife.js"></script> -->
+    <!-- <script src="https://localhost:4173/opentok.iife.js"></script> -->
+    <script src="https://unpkg.com/daily-opentok-client@0.0.14/dist/opentok.iife.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
